--- a/style/style.css
+++ b/style/style.css
@@ -104,6 +104,7 @@ main h2 {
   font-size: 1.5rem;
   color: #ffffff;
   text-align: center;
+  margin: 0 8rem;
   padding: 1rem;
 }
 
@@ -139,6 +140,15 @@ textarea {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 8rem;
+}
+
+.form {
+  font-family: "Electrolize", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.2rem;
+  color: #ffffff;
 }
 
 /* footer */
@@ -162,7 +172,7 @@ textarea {
 .footer {
   font-size: 1.5rem;
   color: #ffffff;
-  text-align: left;
+  text-align: center;
   margin: 0.5rem;
   padding: 0.5rem;
 }
