--- a/style/style.css
+++ b/style/style.css
@@ -471,6 +471,8 @@ footer {
   z-index: 1;
 }
 
+/* Media query de mierda */
+
 @media (max-width: 600px) {
   .logo {
     width: 8rem;
@@ -613,5 +615,49 @@ footer {
 
   audio {
     width: 50%;
+  }
+}
+
+@media (max-width: 330px) {
+  .nav-list {
+    gap: 0.2rem;
+    flex-wrap: wrap;
+    font-size: 0.8rem;
+    padding: 0.1rem 0;
+  }
+
+  .nav-list li {
+    margin: 0 0.5rem;
+  }
+
+  .btn,
+  .btn-lg {
+    font-size: 0.7rem !important;
+    padding: 0.1rem 0.3rem !important;
+    min-width: unset;
+    margin-bottom: 0.3rem !important;
+  }
+
+  .logo {
+    width: 5rem;
+    padding: 0.4rem;
+  }
+
+  header h1 {
+    font-size: 0.8rem;
+  }
+
+  .description {
+    margin: 0 0.5rem;
+    font-size: 0.9rem;
+  }
+
+  main h2 {
+    font-size: 1rem;
+  }
+
+  .michi-tarjetas {
+    flex-direction: column;
+    align-items: center;
   }
 }
