--- a/style/style.css
+++ b/style/style.css
@@ -108,6 +108,34 @@ main h2 {
   padding: 1rem;
 }
 
+/* Estilo para los títulos de la lista de adopción */
+.neon-list-title {
+  font-size: 1.8rem;
+  color: #fff;
+  text-shadow: 0 0 5px #fff, 0 0 10px #62b2f3, 0 0 20px #62b2f3,
+    0 0 40px #62b2f3;
+  animation: neon-flicker 1.2s infinite alternate;
+  margin-bottom: 0.5rem;
+}
+
+/* Estilo para la lista de adopción */
+.adoption-list {
+  list-style: none;
+  font-family: "Electrolize", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.5rem;
+  color: #ffffff;
+  text-align: center;
+  margin: 0 8rem;
+  padding: 1rem;
+}
+
+.adoption-list li {
+  margin-bottom: 1.5rem;
+  justify-content: center;
+}
+
 main .michi-tarjetas {
   display: flex;
   justify-content: center;
